# app-rationalization-agent

./: .env.template  .gitignore  CLAUDE.md  README.md  app-rationalization-agent.txt  pyproject.toml
agents/: activity_analyzer.py  agentic_orchestrator.py  code_analyzer.py  dependency_scanner.py  github_fetcher.py  orchestrator.py  repo_classifier.py  scorer.py
config/: sample_repos.txt  scoring_rubric.json
