[project]
name = "app-rationalization-agent"
version = "0.1.0"
description = "Agentic framework that evaluates GitHub repos and produces 5-R application-rationalization recommendations using Claude tool use."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # HTTP client (async-capable, used by github_fetcher)
    "httpx>=0.27.0",

    # Environment variable management (.env loading)
    "python-dotenv>=1.0.0",

    # Terminal output formatting
    "rich>=13.7.0",

    # Type checking support (optional, for IDE hints)
    "typing-extensions>=4.9.0",

    # Anthropic SDK — required by agents/agentic_orchestrator.py
    # Not used by the deterministic orchestrator (agents/orchestrator.py).
    "anthropic>=0.40.0",
]
